welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: value :: is not a member of java.awt.Color
    T=T::(getCouleurSol)
       ^Array1:16: error: not found: type j
      setCouleurBrosse(T[j])
                         ^Array1:16: error: variable T of type Array[java.awt.Color] does not take type parameters.
      setCouleurBrosse(T[j])
                        ^